--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,5 +13,5 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Hello Worl!!!"></app-explore-container>
+  <app-explore-container name="Hello World!!!"></app-explore-container>
 </ion-content>
